[gd_scene load_steps=65 format=2]

[ext_resource path="res://Fonts/noto_sans_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/noto_sans_64.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/noto_sans_32.tres" type="DynamicFont" id=3]
[ext_resource path="res://Textures/PauseButton.png" type="Texture" id=4]
[ext_resource path="res://Textures/BattleBG1.png" type="Texture" id=5]
[ext_resource path="res://Wave1~3_Scene/Wave1.gd" type="Script" id=6]
[ext_resource path="res://Scene/story.tscn" type="PackedScene" id=7]
[ext_resource path="res://BattleSystem/PauseScene.tscn" type="PackedScene" id=8]
[ext_resource path="res://AttackAnimation/Axe/Axe4.png" type="Texture" id=9]
[ext_resource path="res://AttackAnimation/Axe/Axe1.png" type="Texture" id=10]
[ext_resource path="res://AttackAnimation/Axe/Axe2.png" type="Texture" id=11]
[ext_resource path="res://AttackAnimation/Axe/Axe3.png" type="Texture" id=12]
[ext_resource path="res://AttackAnimation/Bomb/Retro Impact Effect Pack 5 D.png" type="Texture" id=13]
[ext_resource path="res://AttackAnimation/Balrog/Retro Impact Effect Pack 5 A.png" type="Texture" id=14]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt3.png" type="Texture" id=36]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt4.png" type="Texture" id=37]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt5.png" type="Texture" id=38]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt6.png" type="Texture" id=39]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt7.png" type="Texture" id=40]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt9.png" type="Texture" id=41]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt1.png" type="Texture" id=42]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt2.png" type="Texture" id=43]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt8.png" type="Texture" id=44]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt11.png" type="Texture" id=45]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt10.png" type="Texture" id=46]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt12.png" type="Texture" id=47]
[ext_resource path="res://Wave1~3_Scene/Wave1_Option_A.gd" type="Script" id=56]
[ext_resource path="res://Wave1~3_Scene/Wave1_Option_C.gd" type="Script" id=57]
[ext_resource path="res://Wave1~3_Scene/Wave1_Option_D.gd" type="Script" id=58]
[ext_resource path="res://Wave1~3_Scene/Wave1_Option_B.gd" type="Script" id=59]
[ext_resource path="res://Wave1~3_Scene/Wave1_Question.gd" type="Script" id=60]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.886275, 0.941176, 0.933333, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
corner_radius_bottom_right = 40

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.886275, 0.941176, 0.933333, 1 )
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=12]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=26]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.894118, 0.894118, 0.894118, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=11]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=27]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=13]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=28]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=14]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=29]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=55]
bg_color = Color( 1, 0.00784314, 0.00784314, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=56]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 64, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 128, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 192, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 256, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 320, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 384, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 448, 1152, 64, 64 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), null ],
"loop": false,
"name": "Balrog",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=45]
animations = [ {
"frames": [ ExtResource( 42 ), ExtResource( 43 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 44 ), ExtResource( 41 ), ExtResource( 46 ), ExtResource( 45 ), ExtResource( 47 ) ],
"loop": false,
"name": "DarkBolt",
"speed": 16.5
} ]

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 256, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 320, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 384, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=53]
animations = [ {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": false,
"name": "Bomb",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=54]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 9 ), null ],
"loop": false,
"name": "Axe",
"speed": 10.0
} ]

[node name="Wave1" type="Node"]
script = ExtResource( 6 )

[node name="BattleBackground" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="PauseButton" type="TextureButton" parent="BattleBackground"]
margin_left = 1764.0
margin_top = 6.0
margin_right = 2276.0
margin_bottom = 518.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )

[node name="Wave" type="Label" parent="BattleBackground"]
margin_left = 510.0
margin_top = 15.0
margin_right = 1410.0
margin_bottom = 165.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 9 )
text = "Wave 1/3"
align = 1
valign = 1

[node name="Question" type="Label" parent="BattleBackground"]
margin_left = 975.0
margin_top = 250.0
margin_right = 1875.0
margin_bottom = 591.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 9 )
align = 1
valign = 1
autowrap = true
script = ExtResource( 60 )

[node name="OpenStoryButton" type="Button" parent="BattleBackground/Question"]
margin_left = 624.0
margin_top = 335.0
margin_right = 900.0
margin_bottom = 399.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 10 )
text = "查看全文 ▼"

[node name="Enemy" type="Sprite" parent="BattleBackground/Question"]
position = Vector2( -487, 221 )
scale = Vector2( 0.562963, 0.521898 )

[node name="LabelBottomBackground" type="Label" parent="BattleBackground/Question"]
show_behind_parent = true
margin_top = 340.0
margin_right = 900.0
margin_bottom = 399.0
custom_styles/normal = SubResource( 30 )

[node name="Option_A" type="Button" parent="BattleBackground"]
margin_left = 45.0
margin_top = 720.0
margin_right = 945.0
margin_bottom = 870.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 12 )
custom_styles/disabled = SubResource( 26 )
custom_styles/normal = SubResource( 3 )
icon_align = 1
expand_icon = true
script = ExtResource( 56 )

[node name="Option_B" type="Button" parent="BattleBackground"]
margin_left = 975.0
margin_top = 720.0
margin_right = 1875.0
margin_bottom = 870.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 11 )
custom_styles/disabled = SubResource( 27 )
custom_styles/normal = SubResource( 3 )
icon_align = 1
expand_icon = true
script = ExtResource( 59 )

[node name="Option_C" type="Button" parent="BattleBackground"]
margin_left = 45.0
margin_top = 890.0
margin_right = 945.0
margin_bottom = 1040.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 13 )
custom_styles/disabled = SubResource( 28 )
custom_styles/normal = SubResource( 3 )
icon_align = 1
expand_icon = true
script = ExtResource( 57 )

[node name="Option_D" type="Button" parent="BattleBackground"]
margin_left = 975.0
margin_top = 890.0
margin_right = 1875.0
margin_bottom = 1040.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 14 )
custom_styles/disabled = SubResource( 29 )
custom_styles/normal = SubResource( 3 )
icon_align = 1
expand_icon = true
script = ExtResource( 58 )

[node name="WindowDialog" parent="BattleBackground" instance=ExtResource( 7 )]
visible = true

[node name="ProgressBar" type="ProgressBar" parent="BattleBackground/WindowDialog"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -700.0
margin_top = 930.0
margin_right = 700.0
margin_bottom = 940.0
rect_min_size = Vector2( 820, 0 )
custom_styles/fg = SubResource( 55 )
custom_styles/bg = SubResource( 56 )
step = 0.05
percent_visible = false

[node name="PauseScene" parent="BattleBackground" instance=ExtResource( 8 )]
visible = false

[node name="ChangeLevelTimer" type="Timer" parent="BattleBackground"]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="readTheStory" type="Timer" parent="BattleBackground"]
wait_time = 3.0

[node name="Timer" type="Timer" parent="BattleBackground"]
wait_time = 0.01
autostart = true

[node name="BalrogAttackAnimation" type="AnimatedSprite" parent="BattleBackground"]
position = Vector2( 490, 470 )
scale = Vector2( 8.25397, 7.85433 )
frames = SubResource( 25 )
animation = "Balrog"

[node name="DarkBoltAttackAnimation" type="AnimatedSprite" parent="BattleBackground"]
position = Vector2( 490, 490 )
scale = Vector2( 5.42188, 5.77273 )
frames = SubResource( 45 )
animation = "DarkBolt"

[node name="BombAttackAnimation" type="AnimatedSprite" parent="BattleBackground"]
position = Vector2( 491, 470 )
scale = Vector2( 7.28125, 7.63281 )
frames = SubResource( 53 )
animation = "Bomb"

[node name="AxeAttackAnimation" type="AnimatedSprite" parent="BattleBackground"]
position = Vector2( 460, 417 )
scale = Vector2( 1, 1.16211 )
frames = SubResource( 54 )
animation = "Axe"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[connection signal="pressed" from="BattleBackground/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="BattleBackground/Question/OpenStoryButton" to="." method="_on_OpenStoryButton_pressed"]
[connection signal="pressed" from="BattleBackground/Option_A" to="." method="_on_Option_A_pressed"]
[connection signal="pressed" from="BattleBackground/Option_B" to="." method="_on_Option_B_pressed"]
[connection signal="pressed" from="BattleBackground/Option_C" to="." method="_on_Option_C_pressed"]
[connection signal="pressed" from="BattleBackground/Option_D" to="." method="_on_Option_D_pressed"]
[connection signal="timeout" from="BattleBackground/ChangeLevelTimer" to="." method="_on_ChangeLevelTimer_timeout"]
[connection signal="timeout" from="BattleBackground/readTheStory" to="." method="_on_readTheStory_timeout"]
[connection signal="timeout" from="BattleBackground/Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="BattleBackground/BalrogAttackAnimation" to="." method="_on_BalrogAttackAnimation_animation_finished"]
[connection signal="animation_finished" from="BattleBackground/DarkBoltAttackAnimation" to="." method="_on_DarkBoltAttackAnimation_animation_finished"]
[connection signal="animation_finished" from="BattleBackground/BombAttackAnimation" to="." method="_on_BombAttackAnimation_animation_finished"]
[connection signal="animation_finished" from="BattleBackground/AxeAttackAnimation" to="." method="_on_AxeAttackAnimation_animation_finished"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
